@@ -1,3 +1,8 @@
+2004-05-22  Matthew Mueller  <donut@dakotacom.net>
+
+	* main/kconfig.c: make next axis config key skip currently
+	allocated axes (d1x r1.11)
+
 2004-05-22  David Cleaver  <wraithx@morpheus.net>
 
 	* main/kconfig.c: joy configuration next axis key from WraithX
